; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/legacy/extr_zstd_v05.c_FSEv05_createDTable.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/legacy/extr_zstd_v05.c_FSEv05_createDTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FSEv05_TABLELOG_ABSOLUTE_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @FSEv05_createDTable(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @FSEv05_TABLELOG_ABSOLUTE_MAX, align 4
  %5 = icmp ugt i32 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @FSEv05_TABLELOG_ABSOLUTE_MAX, align 4
  store i32 %7, i32* %2, align 4
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @FSEv05_DTABLE_SIZE_U32(i32 %9)
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 4
  %13 = trunc i64 %12 to i32
  %14 = call i64 @malloc(i32 %13)
  %15 = inttoptr i64 %14 to i32*
  ret i32* %15
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @FSEv05_DTABLE_SIZE_U32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
